// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders a plaintext text block 1`] = `
<div
  className="css-kevpsq-TextElement"
>
  <div
    style={
      Object {
        "marginBottom": "undefinedpx",
        "marginLeft": "undefinedpx",
        "marginRight": "undefinedpx",
        "marginTop": "undefinedpx",
      }
    }
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`Text renders a text block with custom styles 1`] = `
<div
  className="css-kevpsq-TextElement"
>
  <div
    style={
      Object {
        "marginBottom": "undefinedpx",
        "marginLeft": "undefinedpx",
        "marginRight": "undefinedpx",
        "marginTop": "undefinedpx",
      }
    }
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "color": "##000000FF",
          "fontSize": "48pxpx",
          "fontStyle": "italic",
          "fontWeight": 700,
          "whiteSpace": "pre-wrap",
        }
      }
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`Text renders an empty text block 1`] = `
<div
  className="css-kevpsq-TextElement"
>
  <div
    style={
      Object {
        "marginBottom": "undefinedpx",
        "marginLeft": "undefinedpx",
        "marginRight": "undefinedpx",
        "marginTop": "undefinedpx",
      }
    }
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
    >
      

    </span>
  </div>
</div>
`;
